<resources>
    <string name="app_name">Movie Catalogue - Jetpack Submission 3</string>

    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="image_thumbnail">Image Thumbnail</string>
    <string name="genre">Genre</string>
    <string name="story_line">Story Line</string>
    <string name="title">Title</string>
    <string name="favourite">Favourite</string>
</resources>